tests/idris2/perf/perf011/expected
1/3: Building A (A.idr)
2/3: Building B (B.idr)
3/3: Building C (C.idr)
Error: While processing type of foo. Can't find an implementation for BFromInteger ?x.

C:5:7--5:14
 1 | module C
 2 |
 3 | import B
 4 |
 5 | foo : BFunc x
           ^^^^^^^

Possible cause: Undefined name A.BFromInteger. 

C:5:7--5:14
 1 | module C
 2 |
 3 | import B
 4 |
 5 | foo : BFunc x
           ^^^^^^^
Did you mean: fromInteger?
Error: While processing type of foo1. Can't find an implementation for BFromInteger ?x.

C:6:8--6:15
 2 |
 3 | import B
 4 |
 5 | foo : BFunc x
 6 | foo1 : BFunc x
            ^^^^^^^

Possible cause: Undefined name A.BFromInteger. 

C:6:8--6:15
 2 |
 3 | import B
 4 |
 5 | foo : BFunc x
 6 | foo1 : BFunc x
            ^^^^^^^
Did you mean: fromInteger?
Error: While processing type of foo2. Can't find an implementation for BFromInteger ?x.

C:7:8--7:15
 3 | import B
 4 |
 5 | foo : BFunc x
 6 | foo1 : BFunc x
 7 | foo2 : BFunc x
            ^^^^^^^

Possible cause: Undefined name A.BFromInteger. 

C:7:8--7:15
 3 | import B
 4 |
 5 | foo : BFunc x
 6 | foo1 : BFunc x
 7 | foo2 : BFunc x
            ^^^^^^^
Did you mean: fromInteger?
Error: While processing type of foo3. Can't find an implementation for BFromInteger ?x.

C:8:8--8:15
 4 |
 5 | foo : BFunc x
 6 | foo1 : BFunc x
 7 | foo2 : BFunc x
 8 | foo3 : BFunc x
            ^^^^^^^

Possible cause: Undefined name A.BFromInteger. 

C:8:8--8:15
 4 |
 5 | foo : BFunc x
 6 | foo1 : BFunc x
 7 | foo2 : BFunc x
 8 | foo3 : BFunc x
            ^^^^^^^
Did you mean: fromInteger?
